--- a/css/style.css
+++ b/css/style.css
@@ -66,12 +66,10 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: start;
-  align-items: center;
   width: 90vw;
   box-shadow: 0.5px 0.5px 7px var(--color-3);
   border-radius: 2px;
   padding: 1rem;
-  min-width: 350px;
   margin-top: 3%;
   margin-left: 50px;
   margin-right: 80px;
@@ -83,6 +81,7 @@ a {
 .text-column {
   width: 70%;
   margin-left: 20px;
+  margin-top: 20px;
 }
 .text-column > h2 {
   font-size: 1.3rem;
@@ -284,7 +283,6 @@ a.category > p:hover {
     font-weight: bold;
     background-color: white;
     font-family: var(--primary-font);
-    text-align: center;
     transform: translateY(-50px);
     display: block;
     margin: auto;
@@ -298,13 +296,24 @@ a.category > p:hover {
     margin-left: 40px;
   }
   .card {
-    margin-top: 5%;
-    margin-left: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    width: 70vw;
+    box-shadow: 0.5px 0.5px 7px var(--color-3);
+    border-radius: 2px;
+    margin-top: 3%;
+    margin-left: 80px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .card > img {
+    margin-top: 5px;
     height: auto;
-    width: 35%;
+    width: 85%;
+    padding-right: 0;
   }
 
   .text-column > h2 {
@@ -312,10 +321,13 @@ a.category > p:hover {
     font-weight: 600;
     margin-bottom: var(--margin-bottom);
     font-family: var(--primary-font);
+    margin-top: 6px;
   }
 
   .description {
     font-family: var(--secondary-font);
+    font-size: 0.8rem;
+    padding-right: 0;
   }
 
   .address {
@@ -323,6 +335,7 @@ a.category > p:hover {
     color: var(--color-3);
     margin-bottom: var(--margin-bottom);
     font-family: var(--secondary-font);
+    font-size: 0.8rem;
   }
 }
 
