--- a/css/style.css
+++ b/css/style.css
@@ -65,14 +65,14 @@ a {
 .card {
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: center;
   width: 90vw;
   box-shadow: 0.5px 0.5px 7px var(--color-3);
   border-radius: 2px;
   padding: 1rem;
   margin-top: 3%;
-  margin-left: 50px;
-  margin-right: 80px;
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 .card > img {
