--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,10 @@ a {
 /*article page*/
 .header-img {
   width: 100%;
-  height: 200px;
-  background-image: url(https://raw.githubusercontent.com/justtyx/explore-copenhagen/main/img/800px_COLOURBOX11893496.jpg);
+  height: 400px;
+  background-image: url(/img/nyhavn-panorama.jpg);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 100%;
   object-fit: cover;
 }
 
@@ -81,7 +81,7 @@ a {
 
 .text-column {
   width: 70%;
-  margin-left: 20px;
+  margin-left: 35px;
   margin-top: 20px;
 }
 
@@ -274,7 +274,7 @@ a.category > p:hover {
   .header-img {
     width: 100%;
     height: 200px;
-    background-image: url("/img/800px_COLOURBOX11893496.jpg");
+    background-image: url(/img/nyhavn-panorama.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
   }
