--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ a {
 .header-img {
   width: 100%;
   height: 400px;
-  background-image: url(/img/nyhavn-panorama.jpg);
+  background-image: url(https://raw.githubusercontent.com/justtyx/explore-copenhagen/main/img/nyhavn-panorama.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
   object-fit: cover;
@@ -274,7 +274,7 @@ a.category > p:hover {
   .header-img {
     width: 100%;
     height: 200px;
-    background-image: url(/img/nyhavn-panorama.jpg);
+    background-image: url(https://raw.githubusercontent.com/justtyx/explore-copenhagen/main/img/nyhavn-panorama.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
   }
