--- a/css/style.css
+++ b/css/style.css
@@ -306,7 +306,7 @@ a.category > p:hover {
     width: 70vw;
     box-shadow: 0.5px 0.5px 7px var(--color-3);
     border-radius: 2px;
-    margin-top: 3%;
+    margin-top: 6%;
     margin-left: 80px;
     padding-left: 0;
     padding-right: 0;
@@ -325,10 +325,13 @@ a.category > p:hover {
     font-family: var(--primary-font);
     margin-top: 6px;
   }
+  .text-column {
+    margin-left: 0;
+  }
 
   .description {
     font-family: var(--secondary-font);
-    font-size: 0.8rem;
+    font-size: 0.88rem;
     padding-right: 0;
   }
 
