--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: var(--secondary-font);
 }
 
 :root {
@@ -75,7 +76,7 @@ a {
   margin-right: 70px;
 }
 
-.card > img {
+.card>img {
   width: 25%;
 }
 
@@ -85,7 +86,7 @@ a {
   margin-top: 20px;
 }
 
-.text-column > h2 {
+.text-column>h2 {
   font-size: 1.3rem;
   font-weight: 600;
   margin-bottom: 0.2rem;
@@ -261,12 +262,12 @@ a.category:hover {
   text-decoration: none;
 }
 
-a.category > p {
+a.category>p {
   color: white;
   font-size: 0.9rem;
 }
 
-a.category > p:hover {
+a.category>p:hover {
   text-decoration: none;
 }
 
@@ -312,19 +313,20 @@ a.category > p:hover {
     padding-right: 0;
   }
 
-  .card > img {
+  .card>img {
     height: auto;
     width: 85%;
     padding-right: 0;
   }
 
-  .text-column > h2 {
+  .text-column>h2 {
     font-size: 1.3rem;
     font-weight: 600;
     margin-bottom: var(--margin-bottom);
     font-family: var(--primary-font);
     margin-top: 6px;
   }
+
   .text-column {
     margin-left: 0;
   }
@@ -532,12 +534,12 @@ a.category:hover {
   text-decoration: none;
 }
 
-a.category > p {
+a.category>p {
   color: white;
   font-size: 0.9rem;
 }
 
-a.category > p:hover {
+a.category>p:hover {
   text-decoration: none;
 }
 
@@ -629,7 +631,7 @@ footer {
   margin: 4rem 1.5rem 0;
 }
 
-footer > p {
+footer>p {
   width: 1fr;
   max-width: 500px;
   justify-self: start;
@@ -645,22 +647,21 @@ footer a:hover {
   color: var(--bg-color);
 }
 
-.soMe > a > img {
+.soMe>a>img {
   width: 1.5vw;
   min-width: 25px;
 }
 
-.soMe > a {
+.soMe>a {
   margin: 0.3rem 0.1rem;
 }
 
-.soMe > a:first-child {
+.soMe>a:first-child {
   margin-left: 0;
 }
 
-.soMe > a:hover {
-  filter: invert(40%) sepia(60%) saturate(3586%) hue-rotate(160deg)
-    brightness(110%) contrast(100%);
+.soMe>a:hover {
+  filter: invert(40%) sepia(60%) saturate(3586%) hue-rotate(160deg) brightness(110%) contrast(100%);
 }
 
 .soMe {
