--- a/css/category-list.css
+++ b/css/category-list.css
@@ -11,50 +11,45 @@
 }
 
 h1 {
-    font-family: 'Montserrat';
+    font-family: var(--primary-font);
     margin-left: 8vw;
     margin-top: 8vh;
-    font-size: 3vw;
+    font-size: 2.5rem;
 }
 
 .categories {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 5vw;
-    row-gap: 5vh;
-    margin-top: 3vw;
-    margin-left: 8vw;
-    margin-right: 8vw;
-    margin-bottom: 3vw;
+    grid-template-columns: repeat(auto-fill, minmax(min(11rem, 100%), 0.7fr));
+    gap: 4rem;
+    justify-content: center;
+    margin: 3vw 8vw;
 }
 
-.category {
-    width: 13vw;
-    height: 13vw;
-    margin-bottom: 10vh;
-    padding: 0;
-    box-shadow: 1px 1px 7px gray;
-    background-color: #0dc2e2;
-}
-
-.category:hover {
-    background-color: #fed642;
-}
-
-.categoryimage {
+.cat-img-cont {
+    background-color: var(--bg-color);
     width: 100%;
     height: 100%;
-    padding: 0;
-    margin-bottom: 0.5vw;
+    border-radius: 3px;
+    box-shadow: 0px 0px 7px var(--color-3);
+}
+
+.cat-img-cont:hover {
+    box-shadow: 0px 0px 15px var(--color-3);
+}
+
+.cat-img-cont>img {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
 }
 
 .categoryname {
-    margin: 0;
-    font-size: 1.5vw;
+    font-size: 1.4rem;
     color: black;
     font-family: 'Montserrat';
     font-weight: 700;
     text-align: center;
+    margin: 0.3rem 0 0;
 }
 
 a {
@@ -81,16 +76,32 @@ a {
         width: 80vw;
         align-items: center;
         height: 15vw;
+        margin-bottom: 10vh;
+        padding: 0;
+        box-shadow: 1px 1px 7px gray;
+        background-color: #0dc2e2;
     }
 
     .categoryname {
-        font-size: 16px;
+        font-size: 20px;
         color: white;
         justify-self: center;
     }
 
-    .categoryimage {
-        width: 20vw;
+    .cat-img-cont {
+        box-shadow: none;
+        width: 15vw;
+        height: 15vw;
+    }
+
+    .cat-img-cont:hover {
+        box-shadow: none;
+    }
+
+    .cat-img-cont>img {
+        width: 100%;
+        height: auto;
+        padding: 0;
     }
 
     h1 {
